# FPGObservationalModel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  fpg_unittest.py  ibx_calculations.py  mkdocs.yml  observational_extracted.py  population_sampling.py  pyproject.toml  requirements.txt  run_observational_model.py  unified_metric_calculations.py  unified_sampling.py  vm_parallelization.py
.github/workflows/: mkdocs_build.yml  mkdocs_deploy.yml  promote_package_to_production.yml  push_image_to_comp.yml  run-tests.yml  staging-build-package.yml  test_and_publish_package_to_staging.yml
docker/: Dockerfile  ObsModel_rocky.id  ObsModel_rocky.sif.md5  Singularity.def  create_auth_token_args.py  pip.conf  push_singularity.py  readme.md
docs/: index.md
fpg_observational_model/: __init__.py  run_observational_model.py  unified_metric_calculations.py  unified_sampling.py
fpg_observational_model/plotting_code/: .Rhistory  incidence_statistics.R  joinPlottingFPGInfectionReportStats.R  observational_extracted.py
fpg_observational_model/plotting_code/.Rproj.user/5C3C3341/sources/prop/: 13C7F217  INDEX
fpg_observational_model/plotting_code/.Rproj.user/5C3C3341/sources/session-e7c47f4b/: 5843C12C  EC4B13EE
fpg_observational_model/plotting_code/.Rproj.user/DF7B9E90/: persistent-state
fpg_observational_model/plotting_code/.Rproj.user/DF7B9E90/sources/prop/: INDEX
fpg_observational_model/plotting_code/.Rproj.user/shared/notebooks/: paths
plotting_code/: incidence_bin_plotting.R  joinPlottingFPGInfectionReportStats.R  temporal_plotting.R
plotting_code/.Rproj.user/5C3C3341/pcs/: files-pane.pper  windowlayoutstate.pper
plotting_code/.Rproj.user/5C3C3341/sources/prop/: 6DC145B3
plotting_code/.Rproj.user/5C3C3341/sources/session-e7c47f4b/: 33596000  33596000-contents  EC4B13EE-contents
plotting_code/.Rproj.user/5C3C3341/viewer-cache/: C25A0EE6.Rdata
plotting_code/.Rproj.user/DF7B9E90/pcs/: files-pane.pper  windowlayoutstate.pper
plotting_code/.Rproj.user/DF7B9E90/sources/prop/: DA07BB21
plotting_code/.Rproj.user/DF7B9E90/sources/session-af0edf4c/: A36B3B0C
test_data/: test_fpg_infections.csv
tests/: fpg_unittest.py
tests/test_data/: test_roots.npy  test_variants.npy
